--- a/index.html
+++ b/index.html
@@ -1,29 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
-    <title>Convex Hull</title>
+    <title>Hecklits Playground</title>
 </head>
-
 <body>
-    <form name="algos" id="right_bar">
-        <div>
-            <legend>Wähle einen Algorithmus</legend>                
-            <input type="radio" id="gs" name="choices" value="grahams_scan" checked>
-            <label for="gs">Graham’s Scan</label>
-            <br>
-            <input type="radio" id="jm" name="choices" value="jarvis_march">
-            <label for="jm">Jarvis’ March</label>
-        </div>
-    </form>
-    <canvas id="can"></canvas>
-    <script src="vector.js"></script>
-    <script src="algos.js"></script>
-    <script src="draw.js"></script>
+    <h1>Hecklits Playground</h1>
+    <ul>
+        <a href="convex_hull/convex_hull.html">Convex Hull</a>
+        <a href="right_triangle/right_triangles.html">Right Triangles</a>
+    </ul>
 </body>
-
 </html>
