iso lines seg ohne avl

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
     <h1>Hecklits Playground</h1>
     <ul>
-        <a href="convex_hull/convex_hull.html">Convex Hull</a>
-        <a href="right_triangle/right_triangles.html">Right Triangles</a>
+       <li> <a href="convex_hull/convex_hull.html">Convex Hull</a></li>
+       <li> <a href="right_triangle/right_triangles.html">Right Triangles</a></li>
+       <li> <a href="iso_oriented_lineseg/isolineseg.html">Iso-oriented line segments</a></li>
     </ul>
 </body>
 </html>
