--- a/iso_oriented_lineseg/isolineseg.html
+++ b/iso_oriented_lineseg/isolineseg.html
@@ -13,6 +13,7 @@
     <h1>Iso-oriented line segments</h1>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
+    <script src="algo.js"></script>
     <script src="isolineseg.js"></script>
 </body>
 
