avl tree implementation

--- a/iso_oriented_lineseg/isolineseg.html
+++ b/iso_oriented_lineseg/isolineseg.html
@@ -12,9 +12,10 @@
 <body>
     <h1>Iso-oriented line segments</h1>
     <canvas id="can"></canvas>
-    <script src="../utils/vector.js"></script>
+    <!-- <script src="../utils/vector.js"></script>
     <script src="algo.js"></script>
-    <script src="isolineseg.js"></script>
+    <script src="isolineseg.js"></script> -->
+    <script src="avltree.js"></script>
 </body>
 
 </html>
