stereo vision without the distance calculation

--- a/stereo_vision/stereo_vision.html
+++ b/stereo_vision/stereo_vision.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <h1>Stereo Vision</h1>
-    <canvas id="can"></canvas>
+    <h2>Stereo Vision</h2>
+    <div id="can"></div>
     <script src="three.js"></script>
     <script src="../utils/vector.js"></script>
     <script src="stereo_vision.js"></script>
