tidy up the page

--- a/stereo_vision/stereo_vision.html
+++ b/stereo_vision/stereo_vision.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="../main.css">
     <title>Stereo Vision</title>
 </head>
-
 <body>
-    <h2>Stereo Vision</h2>
+    <h2>Stereo Vision (powered by <a href="https://threejs.org/" target="blank">three.js</a>)</h2>
     <div id="can"></div>
     <script src="three.js"></script>
     <script src="../utils/vector.js"></script>
