--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Hecklits Playground</title>
+    <link rel="stylesheet" href="main.css">
+    <title>Hecklit`s Playground</title>
 </head>
 <body>
-    <h1>Hecklits Playground</h1>
+    <h1>Hecklit`s Playground</h1>
     <ul>
        <li> <a href="convex_hull/convex_hull.html">Convex Hull</a></li>
        <li> <a href="right_triangle/right_triangles.html">Right Triangles</a></li>
        <li> <a href="iso_oriented_lineseg/isolineseg.html">Iso-oriented line segments</a></li>
+       <li> <a href="stereo_vision/stereo_vision.html">Stereo Vision</a></li>
     </ul>
 </body>
 </html>
