--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
        <li> <a href="right_triangle/right_triangles.html">Right Triangles</a></li>
        <li> <a href="iso_oriented_lineseg/isolineseg.html">Iso-oriented line segments</a></li>
        <li> <a href="stereo_vision/stereo_vision.html">Stereo Vision</a></li>
+       <li> <a href="linear_transformations/linear_transformation.html">Linear Transformations</a></li>
     </ul>
 </body>
 </html>
