--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
        <li> <a href="iso_oriented_lineseg/isolineseg.html">Iso-oriented line segments</a></li>
        <li> <a href="stereo_vision/stereo_vision.html">Stereo Vision</a></li>
        <li> <a href="linear_transformations/linear_transformation.html">Linear Transformations</a></li>
+       <li> <a href="kd_tree/kd_tree.html">KD-Tree</a></li>
     </ul>
 </body>
 </html>
