--- a/kd_tree/kd_tree.html
+++ b/kd_tree/kd_tree.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <h2>KD-Tree</h2>
+    <h2 id='title'>KD-Tree (Point Mode)</h2>
+    Press space to toggle the modes<br>
     <canvas id="can"></canvas>
     <canvas id="can_tree"></canvas>
     <script src="../utils/vector.js"></script>
