--- a/kd_tree/kd_tree.html
+++ b/kd_tree/kd_tree.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h2 id='title'>KD-Tree (Point Mode)</h2>
+    <h2 id='title'>KD-Tree (Selection Mode)</h2>
     Press space to toggle the modes<br>
     <canvas id="can"></canvas>
     <canvas id="can_tree"></canvas>
