--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
        <li> <a href="stereo_vision/stereo_vision.html">Stereo Vision</a></li>
        <li> <a href="linear_transformations/linear_transformation.html">Linear Transformations</a></li>
        <li> <a href="kd_tree/kd_tree.html">KD-Tree</a></li>
+       <li> <a href="stereo_vision_2d/stereo_2d.html">Stereo Vision 2D</a></li>
     </ul>
 </body>
 </html>
