game of life unoptimized

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
        <li> <a href="linear_transformations/linear_transformation.html">Linear Transformations</a></li>
        <li> <a href="kd_tree/kd_tree.html">KD-Tree</a></li>
        <li> <a href="stereo_vision_2d/stereo_2d.html">Stereo Vision 2D</a></li>
+       <li> <a href="game_of_life/game_of_life.html">Conway's Game of Life</a></li>
     </ul>
 </body>
 </html>
