--- a/convex_hull/convex_hull.html
+++ b/convex_hull/convex_hull.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Convex Hull</h1>
+    <a href="../index.html"><h2>Convex Hull</h2></a>
     <form name="algos" id="right_bar">
         <div>
             <legend>Wähle einen Algorithmus</legend>                
