--- a/game_of_life/game_of_life.html
+++ b/game_of_life/game_of_life.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <h2>Conway's Game of Life</h2>
+    <a href="../index.html"><h2>Conway's Game of Life</h2></a>
+    <br><div class="left">Space to pause, A and D to cycle the figure</div>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
     <script src="figures.js"></script>
