--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1>Hecklit`s Playground</h1>
     <ul>
        <li> <a href="convex_hull/convex_hull.html">Convex Hull</a></li>
-       <li> <a href="right_triangle/right_triangles.html">Right Triangles</a></li>
+       <!-- <li> <a href="right_triangle/right_triangles.html">Right Triangles</a></li> -->
        <li> <a href="iso_oriented_lineseg/isolineseg.html">Iso-oriented line segments</a></li>
-       <li> <a href="stereo_vision/stereo_vision.html">Stereo Vision</a></li>
        <li> <a href="linear_transformations/linear_transformation.html">Linear Transformations</a></li>
        <li> <a href="kd_tree/kd_tree.html">KD-Tree</a></li>
+       <li> <a href="stereo_vision/stereo_vision.html">Stereo Vision</a></li>
        <li> <a href="stereo_vision_2d/stereo_2d.html">Stereo Vision 2D</a></li>
        <li> <a href="game_of_life/game_of_life.html">Conway's Game of Life</a></li>
     </ul>
