--- a/iso_oriented_lineseg/isolineseg.html
+++ b/iso_oriented_lineseg/isolineseg.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h2>Iso-oriented line segments</h2>
+    <a href="../index.html"><h2>Iso-oriented line segments</h2></a>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
     <script src="algo.js"></script>
