--- a/linear_transformations/linear_transformation.html
+++ b/linear_transformations/linear_transformation.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Linear Transformations</h1>
+    <a href="../index.html"><h2>Linear Transformations</h2></a>
     <form name="algos" id="right_bar">
         <div>
             <legend>Transformation</legend>
