--- a/stereo_vision/stereo_vision.html
+++ b/stereo_vision/stereo_vision.html
@@ -9,7 +9,7 @@
     <title>Stereo Vision</title>
 </head>
 <body>
-    <h2>Stereo Vision (powered by <a href="https://threejs.org/" target="blank">three.js</a>)</h2>
+    <h2><a id="sv"href="../index.html">Stereo Vision</a> (powered by <a href="https://threejs.org/" target="blank">three.js</a>)</h2>
     <div id="can"></div>
     <script src="three.js"></script>
     <script src="../utils/vector.js"></script>
