--- a/stereo_vision_2d/stereo_2d.html
+++ b/stereo_vision_2d/stereo_2d.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h2>Stereo Vision 2d</h2>
+    <a href="../index.html"><h2>Stereo Vision 2d</h2></a>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
     <script src="stereo_2d.js"></script>
