--- a/stereo_vision_2d/stereo_2d.html
+++ b/stereo_vision_2d/stereo_2d.html
@@ -11,6 +11,19 @@
 
 <body>
     <a href="../index.html"><h2>Stereo Vision 2d</h2></a>
+    <form name="algos">
+        <div>
+            <legend>Parameter:</legend>
+            <input type="range" min="1" max="200" step="1" value="40" class="slider" id="ra">
+            <input type="number" value="40" min="1" max="100" step="10" id="a">
+            <label for="a">=: f</label>
+            <br>
+            <input type="range" min="40" max="600" step="1" value="371" class="slider" id="rb">
+            <input type="number" value="371" step="1" min="0" max="600" id="b">
+            <label for="b">=: len(baseline)</label>
+            <br>
+        </div>
+    </form>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
     <script src="stereo_2d.js"></script>
