--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
        <li> <a href="stereo_vision_2d/stereo_2d.html">Stereo Vision 2D</a></li>
        <li> <a href="game_of_life/game_of_life.html">Conway's Game of Life</a></li>
        <li> <a href="particle_filter/particle_filter.html">Particle filter</a></li>
+       <li> <a href="delaunay/delaunay.html">Delaunay Triangulation</a></li>
     </ul>
 </body>
 </html>
