naive implementation of bezier curves

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
        <li> <a href="game_of_life/game_of_life.html">Conway's Game of Life</a></li>
        <li> <a href="particle_filter/particle_filter.html">Particle filter</a></li>
        <li> <a href="delaunay/delaunay.html">Delaunay Triangulation</a></li>
+       <li> <a href="bezier_curves/bezier_curves.html">Bézier curves</a></li>
     </ul>
 </body>
 </html>
