make it more responsive to small screens

--- a/bezier_curves/bezier_curves.html
+++ b/bezier_curves/bezier_curves.html
@@ -11,11 +11,13 @@
 
 <body>
     <a href="../index.html"><h2>Bézier curves</h2></a>
+    <div>
+        <input type="button" id="clear" value="Clear">
+        <input type="button" id="new_curve" value="New Curve">
+        <input type="button" id="boxes" value="Toggle Boxes">
+        <input type="button" id="demo" value="Demo">
+    </div>
     <canvas id="can"></canvas>
-    <input type="button" id="clear" value="Clear"><br>
-    <input type="button" id="new_curve" value="New Curve"><br>
-    <input type="button" id="boxes" value="Toggle Boxes"><br>
-    <input type="button" id="demo" value="Demo"><br>
     <script src="../utils/vector.js"></script>
     <script src="curve.js"></script>
     <script src="bezier_curves.js"></script>
