add random button placeholder is random

--- a/bezier_curves/bezier_curves.html
+++ b/bezier_curves/bezier_curves.html
@@ -16,6 +16,7 @@
         <input type="button" id="new_curve" value="New Curve">
         <input type="button" id="boxes" value="Toggle Boxes">
         <input type="button" id="demo" value="Demo">
+        <input type="button" id="random" value="Random">
     </div>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
