--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
        <li> <a href="particle_filter/particle_filter.html">Particle filter</a></li>
        <li> <a href="delaunay/delaunay.html">Delaunay Triangulation</a></li>
        <li> <a href="bezier_curves/bezier_curves.html">Bézier curves</a></li>
+       <li> <a href="thin_lense/thin_lense.html">Thin lense</a></li>
     </ul>
 </body>
 </html>
