--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
        <li> <a href="delaunay/delaunay.html">Delaunay Triangulation</a></li>
        <li> <a href="bezier_curves/bezier_curves.html">Bézier curves</a></li>
        <li> <a href="thin_lense/thin_lense.html">Thin lense</a></li>
+       <li> <a href="ml_fighters/ml_fighters.html">Genetic fighters</a></li>
     </ul>
 </body>
 </html>
