degree 2 works now

--- a/b_splines/b_splines.html
+++ b/b_splines/b_splines.html
@@ -11,15 +11,16 @@
 
 <body>
     <a href="../index.html"><h2>B-Splines</h2></a>
-    <div>
+    <!-- <div>
         <input type="button" id="clear" value="Clear">
         <input type="button" id="new_curve" value="New Curve">
         <input type="button" id="boxes" value="Toggle Boxes">
         <input type="button" id="demo" value="Demo">
         <input type="button" id="random" value="Random">
-    </div>
+    </div> -->
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
+    <script src="sol.js"></script>
     <script src="curve.js"></script>
     <script src="b_splines.js"></script>
 </body>
