--- a/b_splines/b_splines.html
+++ b/b_splines/b_splines.html
@@ -11,13 +11,10 @@
 
 <body>
     <a href="../index.html"><h2>B-Splines</h2></a>
-    <!-- <div>
-        <input type="button" id="clear" value="Clear">
-        <input type="button" id="new_curve" value="New Curve">
-        <input type="button" id="boxes" value="Toggle Boxes">
-        <input type="button" id="demo" value="Demo">
-        <input type="button" id="random" value="Random">
-    </div> -->
+    <div class="slidecontainer">
+        <div id="degree_out"></div>
+        <input type="range" min="1" max="4" value="2" class="slider" id="myRange">
+    </div>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
     <script src="sol.js"></script>
