--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
        <li> <a href="bezier_curves/bezier_curves.html">Bézier curves</a></li>
        <li> <a href="thin_lense/thin_lense.html">Thin lense</a></li>
        <li> <a href="ml_fighters/ml_fighters.html">Genetic fighters</a></li>
+       <li> <a href="b_splines/b_splines.html">B-Splines</a></li>
     </ul>
 </body>
 </html>
