--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
        <li> <a href="thin_lense/thin_lense.html">Thin lense</a></li>
        <li> <a href="ml_fighters/ml_fighters.html">Genetic fighters</a></li>
        <li> <a href="b_splines/b_splines.html">B-Splines</a></li>
+       <li> <a href="sarsa_lambda/sarsa_lambda.html">SARSA Lambda Backward</a></li>
     </ul>
 </body>
 </html>
