--- a/graph/graph.html
+++ b/graph/graph.html
@@ -6,16 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../main.css">
-    <title>Graph</title>
+    <title>Multivariable functions</title>
 </head>
 
 <body>
-    <h1>Graph</h1>
-        <div>
-            <label for="a">Funktion: </label>
-            <input type="text" value="x²" class="slider" id="a">
-            <br>
-        </div>
+    <h1>Multivariable functions</h1>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
     <script src="graph.js"></script>
