--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
        <li> <a href="ml_fighters/ml_fighters.html">Genetic fighters</a></li>
        <li> <a href="b_splines/b_splines.html">B-Splines</a></li>
        <li> <a href="sarsa_lambda/sarsa_lambda.html">SARSA Lambda Backward</a></li>
+       <li> <a href="graph/graph.html">Multivariable functions</a></li>
     </ul>
 </body>
 </html>
