fix heading link

--- a/graph/graph.html
+++ b/graph/graph.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Multivariable functions</h1>
+    <a href="../index.html"><h2 id='title'>Multivariable functions</h2></a>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
     <script src="graph.js"></script>
