--- a/rl_village/rl_village.html
+++ b/rl_village/rl_village.html
@@ -6,16 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../main.css">
-    <title>Genetic fighters</title>
+    <title>Reinforcement Village</title>
 </head>
 
 <body>
-    <a href="../index.html"><h1>Genetic fighters</h1></a>
+    <a href="../index.html"><h1>Reinforcement Village</h1></a>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
-    <script src="fighter.js"></script>
+    <script src="agent.js"></script>
     <script src="obstacle.js"></script>
-    <script src="ml_fighters.js"></script>
+    <!-- <script src="rl_village.js"></script> -->
+    <script src="utils.js"></script>
+    <script src="main.js"></script>
+
 </body>
 
 </html>
