--- a/rl_village/rl_village.html
+++ b/rl_village/rl_village.html
@@ -13,10 +13,12 @@
     <a href="../index.html"><h1>Reinforcement Village</h1></a>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
-    <script src="agent.js"></script>
-    <script src="obstacle.js"></script>
+    <!-- <script src="agent.js"></script> -->
+    <!-- <script src="obstacle.js"></script> -->
     <!-- <script src="rl_village.js"></script> -->
     <script src="utils.js"></script>
+    <script src="tasks.js"></script>
+    <script src="entities.js"></script>
     <script src="main.js"></script>
 
 </body>
