--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
        <li> <a href="b_splines/b_splines.html">B-Splines</a></li>
        <li> <a href="sarsa_lambda/sarsa_lambda.html">SARSA Lambda Backward</a></li>
        <li> <a href="graph/graph.html">Multivariable functions</a></li>
+       <li> <a href="fourier/fourier.html">Fourier</a></li>
     </ul>
 </body>
 </html>
