ml fighters refactored

--- a/ml_fighters/ml_fighters.html
+++ b/ml_fighters/ml_fighters.html
@@ -13,6 +13,8 @@
     <a href="../index.html"><h1>Genetic fighters</h1></a>
     <canvas id="can"></canvas>
     <script src="../utils/vector.js"></script>
+    <script src="functions.js"></script>
+    <script src="tests.js"></script>
     <script src="fighter.js"></script>
     <script src="obstacle.js"></script>
     <script src="ml_fighters.js"></script>
