use some computed coeffiients

--- a/fourier/fourier.html
+++ b/fourier/fourier.html
@@ -19,6 +19,8 @@
 </head>
 <body>
     <canvas id="can"></canvas>
+    <script src="https://cdnjs.com/libraries/mathjs"></script>
+    <script src="data.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
