finally got it to work

--- a/fourier/fourier.html
+++ b/fourier/fourier.html
@@ -19,8 +19,8 @@
 </head>
 <body>
     <canvas id="can"></canvas>
-    <script src="https://cdnjs.com/libraries/mathjs"></script>
-    <script src="data.js"></script>
-    <script src="main.js"></script>
+    <script src="../utils/vector.js"></script>
+    <script src="fourier.js"></script>
+    <script src="rest.js"></script>
 </body>
 </html>
