enable access to rl_village

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
        <li> <a href="sarsa_lambda/sarsa_lambda.html">SARSA Lambda Backward</a></li>
        <li> <a href="graph/graph.html">Multivariable functions</a></li>
        <li> <a href="fourier/fourier.html">Fourier</a></li>
+       <li> <a href="rl_village/rl_village.html">RL Village</a></li>
     </ul>
 </body>
 </html>
