Initial state SHK

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
        <li> <a href="graph/graph.html">Multivariable functions</a></li>
        <li> <a href="fourier/fourier.html">Fourier</a></li>
        <li> <a href="rl_village/rl_village.html">RL Village</a></li>
+       <li> <a href="shk/shk.html">Strategischer Heldenkampf</a></li>
     </ul>
 </body>
 </html>
