Combined the buttons

--- a/shk/shk.html
+++ b/shk/shk.html
@@ -22,9 +22,8 @@
     <label for="age2">B (3 gold)</label><br>
     <input type="radio" id="age3" name="age" value="K">
     <label for="age3">K (5 gold)</label><br><br>
-    <button id="buy">Buy</button>
 </form>
-<button id="next">Next</button>
+<button id="next">Buy</button>
 
 <script src="utils.js"></script>
 <script src="enums.js"></script>
