--- a/shk/shk.html
+++ b/shk/shk.html
@@ -24,6 +24,7 @@
 </form>
 <div id="errorMessage"></div>
 <button id="next">Buy</button>
+<button id="demo">Demo</button>
 
 <script src="utils.js"></script>
 <script src="enums.js"></script>
