--- a/shk/shk.html
+++ b/shk/shk.html
@@ -27,9 +27,11 @@
 <button id="next">Buy</button>
 <button id="demo">Demo</button>
 
-<script src="utils.js"></script>
 <script src="enums.js"></script>
+<script src="config.js"></script>
+<script src="utils.js"></script>
 <script src="game.js"></script>
+<script src="monster.js"></script>
 <script src="map.js"></script>
 <script src="player.js"></script>
 <script src="tile.js"></script>
