--- a/shk/shk.html
+++ b/shk/shk.html
@@ -37,6 +37,7 @@
 <script src="game.js"></script>
 <script src="monster.js"></script>
 <script src="map.js"></script>
+<script src="goldmine.js"></script>
 <script src="player.js"></script>
 <script src="tile.js"></script>
 <script src="unit.js"></script>
