--- a/shk/shk.html
+++ b/shk/shk.html
@@ -9,8 +9,9 @@
 <body>
 <div id="test"></div>
 
+<div class="container">
 <canvas id="can"></canvas>
-
+<div class="controls">
 <form id="buyForm">
     <p>Buy unit:</p>
     <label for="numUnit">#</label>
@@ -30,6 +31,8 @@
 <div id="errorMessage"></div>
 <button id="next">Buy</button>
 <button id="demo">Demo</button>
+</div>
+</div>
 
 <script src="enums.js"></script>
 <script src="config.js"></script>
