--- a/shk/shk.html
+++ b/shk/shk.html
@@ -45,6 +45,8 @@
 <script src="tile.js"></script>
 <script src="unit.js"></script>
 <script src="hero.js"></script>
+<script src="fight-vis/fightvis.js"></script>
+<script src="fight-vis/fightvis-unit.js"></script>
 <script src="integration-tests.js"></script>
 <script src="shk.js"></script>
 </body>
