--- a/shk/shk.html
+++ b/shk/shk.html
@@ -34,20 +34,24 @@
 </div>
 </div>
 
-<script src="enums.js"></script>
-<script src="config.js"></script>
-<script src="utils.js"></script>
-<script src="game.js"></script>
-<script src="monster.js"></script>
-<script src="map.js"></script>
-<script src="goldmine.js"></script>
-<script src="player.js"></script>
-<script src="tile.js"></script>
-<script src="unit.js"></script>
-<script src="hero.js"></script>
-<script src="fight-vis/fightvis.js"></script>
-<script src="fight-vis/fightvis-unit.js"></script>
+<script src="logic/enums.js"></script>
+<script src="logic/event-emitter.js"></script>
+<script src="logic/config.js"></script>
+<script src="logic/utils.js"></script>
+<script src="logic/game.js"></script>
+<script src="logic/monster.js"></script>
+<script src="logic/map.js"></script>
+<script src="logic/goldmine.js"></script>
+<script src="logic/player.js"></script>
+<script src="logic/tile.js"></script>
+<script src="logic/unit.js"></script>
+<script src="logic/hero.js"></script>
+<script src="vis/utils.js"></script>
+<script src="vis/draw-engine.js"></script>
+<script src="vis/fight-vis/fightvis.js"></script>
+<script src="vis/fight-vis/fightvis-unit.js"></script>
 <script src="integration-tests.js"></script>
+<script src="ai/ai.js"></script>
 <script src="shk.js"></script>
 </body>
 </html>
