--- a/shk/shk.html
+++ b/shk/shk.html
@@ -52,6 +52,7 @@
         </div>
     </div>
 </div>
+<textarea id="test-case"></textarea>
 
 <script src="logic/enums.js"></script>
 <script src="logic/event-emitter.js"></script>
