--- a/shk/shk.html
+++ b/shk/shk.html
@@ -28,7 +28,7 @@
         </button>
         <button id="demo">Demo</button>
     </div>
-    <div class="game d-none" id="game">
+    <div class="game" id="game">
         <canvas id="can"></canvas>
         <div class="controls">
             <form id="buyForm">
