WIP State rewrite

--- a/shk/shk.html
+++ b/shk/shk.html
@@ -57,6 +57,8 @@
 <script src="logic/enums.js"></script>
 <script src="logic/event-emitter.js"></script>
 <script src="logic/utils.js"></script>
+<script src="logic/actions.js"></script>
+<script src="logic/state.js"></script>
 <script src="logic/game.js"></script>
 <script src="logic/monster.js"></script>
 <script src="logic/map.js"></script>
